[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_gasbuddy"
version = "0.4.3"
description = "Python wrapper for GasBuddy GraphQL API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "firstof9", email = "firstof9@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiofiles",
    "aiohttp",
    "backoff",
    "requests",
]

[project.optional-dependencies]
test = [
    "aioresponses",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "requests-mock",
    "tox",
]

[project.urls]
Homepage = "https://github.com/firstof9/py-gasbuddy"
Download = "https://github.com/firstof9/py-gasbuddy"

[tool.setuptools]
packages = ["py_gasbuddy"]
include-package-data = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --timeout=30 --cov=py_gasbuddy --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "S",   # flake8-bandit
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # Missing submodule docstring
    "D104", # Missing package docstring
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D101", "D102", "D103"]

[tool.mypy]
python_version = "3.13"
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
strict_bytes = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["deprecated", "ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked", "import-not-found", "import-untyped"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[tool.coverage.run]
source = ["py_gasbuddy"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
